# Chat

Chat/: CMakeLists.txt
Chat/Client/: CMakeLists.txt  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  message.ui
Chat/Server/: CMakeLists.txt  myserver.cpp  myserver.h
